# sokoban-amethyst

./: Cargo.toml  README.md
assets/images/: floor.ron
assets/prefab/: box_blue_animation.ron  box_red_animation.ron  player_animation.ron
config/: bindings.ron  display.ron
src/: components.rs  entities.rs  events.rs  main.rs  map.rs  sokoban.rs
src/systems/: animation.rs  gameplay_state.rs  mod.rs  movement.rs  sound.rs
