[package]
name = "sokoban-tutorial"
version = "0.1.0"
authors = ["iiu <iiu@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.126", features = ["derive"] }

[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]